@@ -34,7 +34,6 @@ import org.apache.kafka.connect.transforms.TimestampConverter;
 import org.apache.kafka.connect.transforms.TimestampRouter;
 import org.apache.kafka.connect.transforms.ValueToKey;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class TransformationDoc {
@@ -42,7 +41,7 @@ public class TransformationDoc {
     private record DocInfo(String transformationName, String overview, ConfigDef configDef) {
     }
 
-    private static final List<DocInfo> TRANSFORMATIONS = Arrays.asList(
+    private static final List<DocInfo> TRANSFORMATIONS = List.of(
             new DocInfo(Cast.class.getName(), Cast.OVERVIEW_DOC, Cast.CONFIG_DEF),
             new DocInfo(DropHeaders.class.getName(), DropHeaders.OVERVIEW_DOC, DropHeaders.CONFIG_DEF),
             new DocInfo(ExtractField.class.getName(), ExtractField.OVERVIEW_DOC, ExtractField.CONFIG_DEF),
